--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-@import '~bootstrap/dist/css/bootstrap.min.css';
+/* @import '~bootstrap/dist/css/bootstrap.min.css'; */
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 @import './bootstrap-social.css';
 
